<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_blue">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sisvita_logo"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminos_y_condiciones"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminos_condiciones_texto"
            android:textColor="@android:color/black" />
    </ScrollView>

    <CheckBox
        android:id="@+id/checkbox_terminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/aceptar_terminos" />

    <CheckBox
        android:id="@+id/checkbox_notificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/aceptar_notificaciones" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_no_acepto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_acepto"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar" />
    </LinearLayout>
</LinearLayout>
