<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_blue">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/sisvita_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_sus_datos"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_institucional"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edad"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sexo_options"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/estado_civil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/estado_civil_options"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/ocupacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ocupacion"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuar" />
    </LinearLayout>
</LinearLayout>